QTreeView: speedup expanding items via keyPressEvent/asterisk

Expanding items with asterisk is done with expand(QModelIndex) which in
the end calls layout() which is very slow and useless until all items
are expanded. Therefore delay the relayouting until all items are
expanded.

[ChangeLog][QtWidgets][QTreeView] Speedup expanding items when
pressing asterisk

Task-number: QTBUG-39486
Change-Id: Ieb798fc22e9fa0dcac4bb92de7e3ed3ebb9d1c38
Reviewed-by: David Faure <david.faure@kdab.com>